--- a/AppCoder/templates/hospedaje_detalle.html
+++ b/AppCoder/templates/hospedaje_detalle.html
@@ -11,7 +11,7 @@
     <p>Habitacion disponible: <i>{{hospedaje.HabDispo}}</i></p>
 
     <p>
-        <a href="{% url 'AppCoder/hospedaje/list' %}">Regresar</a>
+        <a href="{% url 'hospedaje/List' % }">Regresar</a>
     </p>
 </body>
 </html>
