--- a/AppCoder/templates/hospedaje_confirm_delate.html
+++ b/AppCoder/templates/hospedaje_confirm_delate.html
@@ -7,9 +7,9 @@
     <title>Hospedaje-borrar</title>
 </head>
 <body>
-    <form method="post"> {% csrf_token %}
-        Seguro que deseas borrar el hospedaje "{{object}}"?
-        <input type="submit" value="submit"/>
+    <form method="POST"> {% csrf_token %}
+        Seguro que deseas borrar el hospedaje "{{ object }}"?
+        <input type="submit" value="Submit"/>
 
     </form>
 </body>
