--- a/AppCoder/templates/login.html
+++ b/AppCoder/templates/login.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospedaje-formulario</title>
+    <title>login</title>
 </head>
 <body>
-    <form method="POST">
+    <form action="" method="POST">
         {% csrf_token %}
-        {{ form.as_p}}
-        <input type="submit" value="Enviar"/>
+        {{form.as_p}}
+
+        <button type="submit"> Iniciar sesion: </button>
     </form>
 </body>
 </html>
