--- a/AppCoder/templates/logout.html
+++ b/AppCoder/templates/logout.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hospedaje-formulario</title>
+    <title>Logout</title>
 </head>
 <body>
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_p}}
-        <input type="submit" value="Enviar"/>
-    </form>
+    <h1>Se finalizo la sesion...</h1>
 </body>
 </html>
