agrego funcion subir avatar+correcion de detalles

--- a/AppCoder/templates/hospedaje.html
+++ b/AppCoder/templates/hospedaje.html
@@ -6,7 +6,14 @@
  <!-- Lo que va cambiar-->
 
  <h1> Hospedajes</h1>
- <p> Aqui puede ver los diferentes tipos de alojamientos</p>
- <h3>blbla</h3>
+
+ <form action="buscar/" method="GET">
+    <p>Realizar busqueda de alojamiento:</p>
+    <input type="text"  name="nombre" id="nombre">
+    <input type="submit" value="Buscar">
+
+</form>
+
+ 
 
  {% endblock %}
