--- a/AppCoder/templates/registro.html
+++ b/AppCoder/templates/registro.html
@@ -13,5 +13,9 @@
 
         <button type="submit"> Registrarse </button>
     </form>
+    <p>
+
+        <a href="{% url 'Inicio' %}">Volver a inicio</a>
+    </p>
 </body>
 </html>
