--- a/AppCoder/templates/acercaDeMi.html
+++ b/AppCoder/templates/acercaDeMi.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>login</title>
+    <title>AppCoder-AboutMe</title>
 </head>
 <body>
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-
-        <button type="submit"> Iniciar sesion</button>
-    </form>
-  <a href="register"> Registrarse</a>
+    <h1>HOla</h1>
 </body>
 </html>
