--- a/AppCoder/templates/logout.html
+++ b/AppCoder/templates/logout.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Se finalizo la sesion...</h1>
+    <p>
+        <a href="{% url 'Inicio' %}">Volver a inicio</a>
+    </p>
 </body>
 </html>
