--- a/AppCoder/templates/resultadosBusqueda.html
+++ b/AppCoder/templates/resultadosBusqueda.html
@@ -15,6 +15,11 @@
      {% else %}
         <p> No hay hospedajes para esta busqueda  </p>
      {% endif %}  
+
+     <p>
+
+      <a href="{% url 'Hospedaje' %}">Volver a hospedaje</a>
+  </p>
             
 </body>
 </html>
