modifico teztos de html

--- a/AppCoder/templates/inicio.html
+++ b/AppCoder/templates/inicio.html
@@ -5,8 +5,9 @@
  {% block contenidoQueCambia %} 
  <!-- Lo que va cambiar-->
 
- <h1> INICIO</h1>
- <p> Bienvenidos</p>
- <h3>Contactenos </h3>
+ <h1> Bienvenidos!</h1>
+ <p> Aqui podra realizar la reserva de su alojamiento en la ciudadad de Puerto Iguazu - Argentina
+ </p>
+ <h3>No dude en contactarnos, tenemos diferentes opciones para usted. </h3>
 
  {% endblock %}
