--- a/AppCoder/templates/padre.html
+++ b/AppCoder/templates/padre.html
@@ -84,8 +84,8 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Reserve su alojamiento</h1>
-                            </h2> Semana santa 10% de descuento </h2>
+                            <h1 class="mb-5">Agencia de Turismo Embororé </h1>
+                            </h2> Realice la reserva de su alojamiento en Puerto Iguazu </h2>
                            
                         </div>
                     </div>
