--- a/AppCoder/templates/acercaDeMi.html
+++ b/AppCoder/templates/acercaDeMi.html
@@ -7,6 +7,15 @@
     <title>AppCoder-AboutMe</title>
 </head>
 <body>
-    <h1>HOla</h1>
+    <h1>Hola!</h1>
+    <p>Somos Ana y Camila, ingenieras civiles egrasadas de la Universidad Nacional de Cordoba. <br>
+        Actualemte nos encontramos trabajando con metodologia BIM (Building Information Modelling) <br>
+        y descubrimos que aprender python seria muy util para nuestro dia a dia, para automatizar datos y funciones. <br>
+
+
+
+
+    </p>
+    <a href="{% url 'Inicio' %}">Volver a inicio</a>
 </body>
 </html>
