--- a/AppCoder/templates/huesped.html
+++ b/AppCoder/templates/huesped.html
@@ -5,8 +5,14 @@
  {% block contenidoQueCambia %} 
  <!-- Lo que va cambiar-->
 
- <h1> Consulte aqui su alojamiento</h1>
- <p>Si ud. ya realizo una reserva, puede consultarla aqui</p>
- <h3>No olvide suscribirse! </h3>
+ <h1> Recomendaciones para su viaje:</h1>
+ <p>Llevar:</p>
+ <li>Protector solar</li>
+ <li>Gorro</li> 
+ <li>Repelente de mosquitos</li> 
+ <li>Campera impermeable</li> 
+<li>Ganas de aventuras</li>
+ 
+ 
 
  {% endblock %}
