--- a/AppCoder/templates/reserva.html
+++ b/AppCoder/templates/reserva.html
@@ -6,7 +6,7 @@
  <!-- Lo que va cambiar-->
 
  <h1> Condiciones de reservas:</h1>
- <p> Para reservar debe abonar mediante transferencia bancaria el valor de una noche.</p>
+ <p> Para reservar, debe abonar mediante transferencia bancaria el valor de una noche.</p>
  <h3>Por favor, no olvide enviar comprobante.</h3>
 
  {% endblock %}
