--- a/AppCoder/templates/padre.html
+++ b/AppCoder/templates/padre.html
@@ -38,8 +38,8 @@
             <div class="container">
                 <a class="navbar-brand" href="{% url 'Inicio' %}">Inicio</a>
                 <a class="navbar-brand" href="{% url 'Hospedaje' %}">Hospedaje</a>
-                <a class="navbar-brand" href="{% url 'Reserva' %}">Reservas</a>
-                <a class="navbar-brand" href="{% url 'Huesped' %}">Huesped</a>
+                <a class="navbar-brand" href="{% url 'reservaFormulario' %}">Reservas</a>
+                <a class="navbar-brand" href="{% url 'huespedFormulario' %}">Huesped</a>
                 {% if not request.user.is_authenticated %}
                 <a class="btn btn-primary" href="{% url 'Login' %}">Iniciar Sesion</a>
                 
