--- a/AppCoder/templates/reservaFormulario.html
+++ b/AppCoder/templates/reservaFormulario.html
@@ -20,7 +20,8 @@
         <p>habitacion Disponibles:<input: type="number" name="Habitaciones Disponibles" ></p>-->
 
         <input type="submit" value="Enviar" >
-
+        
+        <a href="{% url 'Inicio' %}">Volver a inicio</a>
     </form>
 </body>
 </html>
