--- a/AppSegunda/templates/reservaFormulario.html
+++ b/AppSegunda/templates/reservaFormulario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario - Agregar hospedaje  </title>
+    <title>Formulario - Agregar reserva  </title>
 </head>
 <body>
     {% if miFormulario.error %}
@@ -21,7 +21,9 @@
 
         <input type="submit" value="Enviar" >
 
+        <a href="{% url 'Inicio' %}">Volver a inicio</a>
     </form>
+
    
 </body>
 </html>
